--- a/docs/team/olivercheok20.adoc
+++ b/docs/team/olivercheok20.adoc
@@ -39,13 +39,14 @@ future extensions convenient and simple.
 
 ** Enhancements to existing features:
 *** Created the Insurelytics logo
+*** Make right panel update appropriately during commands that update the expanded person/policy: https://github.com/AY1920S1-CS2103-F09-4/main/pull/228[#231]
 *** Add/maintain commands to add tags/criteria to people and policies: https://github.com/AY1920S1-CS2103-F09-4/main/pull/95[#95], https://github.com/AY1920S1-CS2103-F09-4/main/pull/117[#117]
 *** Format person and policy cards in the UI: https://github.com/AY1920S1-CS2103-F09-4/main/pull/117[#117]
 *** Formatting user messages: https://github.com/AY1920S1-CS2103-F09-4/main/pull/193[#193]
 *** Fixed miscellaneous bugs
 ** Documentation:
 *** Added miscellaneous commands to User Guide: https://github.com/AY1920S1-CS2103-F09-4/main/pull/70[#70], https://github.com/AY1920S1-CS2103-F09-4/main/pull/71[#71], https://github.com/AY1920S1-CS2103-F09-4/main/pull/133[#133], https://github.com/AY1920S1-CS2103-F09-4/main/pull/99[#136], https://github.com/AY1920S1-CS2103-F09-4/main/pull/206[#206]
-*** Added documentation for eligibility function to Developer Guide: https://github.com/AY1920S1-CS2103-F09-4/main/pull/228[#228]
+*** Added documentation for eligibility function to Developer Guide: https://github.com/AY1920S1-CS2103-F09-4/main/pull/228[#231]
 ** Community:
 *** PRs reviewed (with non-trivial review comments): https://github.com/AY1920S1-CS2103-F09-4/main/pull/99[#99], https://github.com/AY1920S1-CS2103-F09-4/main/pull/108[#108], https://github.com/AY1920S1-CS2103-F09-4/main/pull/109[#109], https://github.com/AY1920S1-CS2103-F09-4/main/pull/207[#207], https://github.com/AY1920S1-CS2103-F09-4/main/pull/206[#206],
 
