--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -150,7 +150,7 @@ Format: `invite p/PERSON ...`
 Example: +
 Suppose you have already created an activity with Alice, Bob and Carl in it.
 
-image::Activity.png
+image::Activity.png[]
 
 And you have friends that wants to join an activity midway.
 
@@ -158,11 +158,11 @@ To invite:
 
 Step 1: Type `invite` into the command box and specify the contacts you want to invite from the contact list with the `p/` prefix e.g. `invite p/Mary p/John p/Carl` and press `Enter` to execute it.
 
-image::../images/InviteExample.png
+image::../images/InviteExample.png[]
 
 Step 2: Observe the output in result box and the activity details box.
 
-image::InviteOutput.png
+image::InviteOutput.png[]
 
 NOTE: *The `invite` command only invites to current viewed activity.* +
 if there is no current viewed activity, there will be an error. +
@@ -184,7 +184,7 @@ Format: `disinvite p/PERSON ...`
 Example: +
 Suppose you have an activity with the same participants but with an expense shared by Alice, Bob and John
 
-image::DisinviteExample.png
+image::DisinviteExample.png[]
 
 And you feel that the activity has too many participants that do not participate in any event, thus having no shared expense and you decided to remove them.
 
@@ -192,11 +192,11 @@ To disinvite:
 
 Step 1: Type `disinvite` into the command box and specify the contacts you want to disinvite from the activity with the `p/` prefix e.g. `disinvite p/Mary p/John p/Carl` and press `Enter` to execute it.
 
-image::DisinviteCommand.png
+image::DisinviteCommand.png[]
 
 Step 2: Observe the output in result box and the activity details box.
 
-image::DisinviteOutput.png
+image::DisinviteOutput.png[]
 
 NOTE: *The `disinvite` command only disinvites from current viewed activity.* +
 if there is no current viewed activity, there will be an error. +
