--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -274,14 +274,18 @@ Certain properties of the application can be controlled (e.g user prefs file loc
 
 //tag::sorting[]
 === Sorting feature
-The Sorting feature allows users to sort their food items based on certain `FIELD` and `DIRECTION`.
+The Sorting feature allows users to sort their food items based on certain `FIELD` and `DIRECTION`. The `FIELD` and
+`DIRECTION` are as followed:
 
 ****
-1. The `FIELD` are as follows: `NAME`, `DESCRIPTION`, `PRICE`, `CATEGORY`, `LOCATION`, `OPENING_HOURS`, `RESTRICTIONS`.
-2. The `DIRECTION` are as follows: `ASCENDING` or `DESCENDING`.
+1. `FIELD` : `NAME`, `DESCRIPTION`, `PRICE`, `CATEGORY`, `LOCATION`, `OPENING_HOURS`, `RESTRICTIONS`.
+2. `DIRECTION` : `ASC` or `DESC`.
 ****
 
-First and foremost, they will be able to sort the food items based on their default ordering.
+[NOTE]
+The `FIELD` and `DIRECTION` can be entirely in Upper or Lower Case.
+
+First and foremost, users will be able to sort the food items based on their default ordering.
 The default ordering is based on ascending price, name and then category. This is done using the `default` command.+
 
 Not only that, they will be able to implement their own custom comparator using `makesort`. From this, they should be able to use `customsort` and autosort`.  +
@@ -298,8 +302,41 @@ From the model, the `CustomSorter` stores the comparator for `autosort` and `mak
 
 From which, you will need to call `makesort FIELD DIRECTION` to create the custom comparator. The `CustomSorter` contains a `FoodComparator`. +
 
-The `FoodComparator` stores fields which will be needed for various `FOOD` to be compared. The `DefaultComparator` helps to sort food items based on their natural ordering. This is called via the `default` command.
-Finally, the `FieldComparator` helps to compare between various `FIELD`.
+The `FoodComparator` stores fields which will be needed for various `Food` to be compared.
+The `DefaultComparator` helps to sort food items based on their natural ordering. This is called via the `default` command.
+When `default` is called, the food list will be sorted according to ascending category, ascending name and ascending price.
+
+Detailed below are the design considerations taken into account when engineering the `DefaultComparator` and `FoodComparator`
+classes.
+
+.Design considerations of `
+[cols="50,50"]
+|===
+|Alternative 1 (Chosen Implementation) |Alternative 2
+
+a|`DefaultComparator` should extend from `FoodComparator`
+
+* Pros:
+** Duplicate Code is not needed.
+** This from of relationship follows Liskov Substitution Principle, as `DefaultComparator` can be easily substituted
+by an instance of `FoodComparator`.
+
+* Cons:
+** Necessary to specify fields while constructing the `DefaultComparator`.
+
+a|`DefaultComparator` and `FoodComparator` should be standalone classes.
+
+* Pros:
+** Both can implement their own `compareTo()` methods.
+
+* Cons:
+** This Implementation is wasteful as duplicate code is written.
+** Makes it complicated for future developers when they wish to change the `DefaultComparator`.
+|===
+
+As a result, we have chosen alternative 1. By specifying the specific fields in the body of constructor in
+the `DefaultComparator`, it makes it easier for future developers to create their own form of `DefaultComparator`.
+Not only that, it saves time and reduces duplicate code.
 
 ==== Creation of new Custom Comparator
 
@@ -312,11 +349,11 @@ image::MakeSortSequenceDiagram.png[]
 
 The user may want to create a new custom comparator. This can be done with the `makesort` command.
 
-The fields are stored in the SavingsAccount in the CustomSorter object, which stores the necessary
+The fields are stored in the `FoodComparator` in the CustomSorter object, which stores the necessary fields
 as a list.
 
-The current implementation for creating a new CustomSorter is done by overwriting the existing CustomSorter, with a new
-CustomSorter with the desired fields.
+The current implementation for creating a new `CustomSorter` is done by overwriting the existing `CustomSorter`, with a new
+`CustomSorter` with the desired fields.
 
 The command is read as a text string from the command box in the UI and then is executed by calling MainWindow#executeCommand(),
 which passes this string (named commandText) to the Logic component by calling Logic#execute(Model model).
@@ -329,6 +366,51 @@ image::MakeSortActivityDiagram.png[align="center", width="500"]
 
 If fields are given, the original CustomSorter is overridden by a new CustomSorter with new fields. Else, the original
 CustomSorter is overridden by a new CustomSorter with no fields.
+
+==== Sorting of the Food list
+After the customization of the Custom Comparator, the user can now call the `customsort` command to sort the food items based
+on the fields specified. For example, if the fields specified are `PRICE ASC NAME DESC`, the system will sort the food items in order
+of ascending price. If two items have the same price, they will be ranked according to their names using lexicographic
+comparison.
+
+.Activity diagram for a sample sort command
+
+image::SortingActivityDiagram.png[align="center", width="500"]
+
+If two foods have the same price, they will compared using lexicographical ordering based on their names. If they
+are lexicographically similar, their ranks do not change.
+
+.Ranking of food items
+|===
+
+|Name |Price ($) |Ranking (Price) | Overall Ranking
+
+|Chicken Rice
+|2.80
+|2
+|2
+|Nasi Lemak
+|2.80
+|2
+|3
+|Fried Rice
+|4.00
+|4
+|4
+|Dim Sum
+|1.80
+|1
+|1
+
+|===
+
+From the table above, we can see Dim Sum will be ranked at the top as it is the cheapest. On the other hand, Fried Rice will
+be ranked at the bottom as it is the most expensive food item.
+
+As Chicken Rice and Nasi Lemak have the same price, they will compared
+using lexicographical ordering based on their names. Chicken Rice still has a higher ranking than Nasi Lemak as Chicken Rice is
+lexicographically smaller than Nasi Lemak.
+
 //end::sorting[]
 
 //tag::savings[]
