--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -366,17 +366,13 @@ _Figure 2: Sequence diagram showing the process of exporting to a document file_
 
 NOTE: Due to a limitation of PlantUML, object lifelines in the diagram extend beyond the destroy markers. Of course, you should ignore this.
 
-The following activity diagram provides a general overview of the events that occur when a user executes an `export` command:
+The following activity diagrams provide a general overview of the events that occur when a user executes an `export` or `import` command:
 
-image::ExportActivityDiagram.png[width=517,height=546]
+image:ExportActivityDiagram.png[width=491,height=518]
+image:ImportActivityDiagram.png[width=427,height=513]
 
-_Figure 3: Activity diagram of when the user executes an `export` command_
-
-The following activity diagram provides a general overview of the events that occur when a user executes an `import` command:
-
-image::ImportActivityDiagram.png[width=450,height=540]
-
-_Figure 4: Activity diagram of when the user executes an `import` command_
+_Left - Figure 3: Activity diagram of the execution of an `export` command_ +
+_Right - Figure 4: Activity diagram of the execution of an `import` command_
 
 ==== Design considerations
 
