--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -4,8 +4,7 @@
 :imagesDir: images
 :stylesDir: stylesheets
 
-AddressBook - Level 3 was developed by the https://se-edu.github.io/docs/Team.html[se-edu] team. +
-_{The dummy content given below serves as a placeholder to be used by future forks of the project.}_ +
+_KeyboardFlashCards_ was developed by the https://github.com/AY1920S1-CS2103T-T12-4[AY1920S1-CS2103T-T12-4] team. +
 {empty} +
 We are a team based in the http://www.comp.nus.edu.sg[School of Computing, National University of Singapore].
 
